--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
     defaultConfig {
-        applicationId "com.example.testmap"
+        applicationId "com.example.tokoin"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
